--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-    "name": "node-http",
+    "name": "node-express",
     "version": "1.0.0",
-    "description": "Node HTTP Module Example",
+    "description": "Node Express Example",
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "morgan": "^1.10.0"
     }
 }
